--- a/src/main/webapp/battlefield/battlefield.css
+++ b/src/main/webapp/battlefield/battlefield.css
@@ -16,7 +16,6 @@
   min-height: 30px;
   min-width: 30px;
   margin-bottom: 5px;
-  background: blue;
   float: left;
   transition: all 0.2s ease;
 }
@@ -35,8 +34,12 @@
 	background-color: lightblue;
 }
 
-.plons {
-	background-color: lightblue;
+.boat {
+	background-color: blue;
+}
+
+.hit {
+    background-color: orange;
 }
 
 .sea {
